# practica

./: README.md
QueueLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Project.sln  README.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
QueueLib/cmake_modules/: FindCppUnit.cmake  README
QueueLib/cppunit-1.13.2/lib/: cppunitd_dll.lib
QueueLib/cppunit-1.13.2/src/: CppUnitLibraries2010.sln
QueueLib/cppunit-1.13.2/src/cppunit/: cppunit_dll.vcxproj  cppunit_dll.vcxproj.filters
QueueLib/cppunit-1.13.2/src/cppunit/DebugDll/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  cppunit_dll.lastbuildstate  cppunit_dll.write.1.tlog  cppunitd_dll.exp  cppunitd_dll.ilk  cppunitd_dll.lib  cppunitd_dll_manifest.rc  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
QueueLib/cppunit/ReleaseDll/: cppunit_dll.exp  cppunit_dll.lastbuildstate  cppunit_dll.lib
QueueLib/src/: CMakeLists.txt  Queue.cpp  Queue.h  Vector.cpp  Vector.h
QueueLib/test/: Test.vcxproj  Test.vcxproj.filters  main.cpp
QueueLib/test/test_queue/: CMakeLists.txt  queuetest.cpp  queuetest.h
QueueLib/test/test_vector/: CMakeLists.txt  vectortest.cpp  vectortest.h
presentacion/: clear.sh  presentation-capacitation.tex
presentacion/figures/: class_diagram.uxf
